--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,48 @@
-*{
-  padding:0;
-  margin:0;
+* {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
-.content{
-  height:80vh;
+.content {
+  height: 80vh;
 }
 
-.navbar{
+.navbar {
   background-color: aqua !important;
+}
+
+.register-page,
+.login-page {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 90vh;
+}
+
+.filters {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 20px;
+  box-shadow: 0 0 3px gray;
+}
+
+.switch-container{
+  border: 1px solid gray;
+  border-radius: 5px;
+  padding: 10px 15px;
+}
+
+.anticon svg{
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.active-icon{
+  color: black;
+}
+
+.inactive-icon{
+  color:gray;
 }
